@@ -1,3 +1,7 @@
+2004-03-12  Emmanuel Allaud
+
+	* libbalsa/filter.c: compare filter names correctly.
+
 2004-03-10 11:47  PeterB
 
 	* configure.in: when $prefix is `NONE', replace with correct
